Updated latest shared/elements from gaia

--- a/elements/gaia_header/style.css
+++ b/elements/gaia_header/style.css
@@ -90,11 +90,11 @@ button[disabled] {
 }
 
 /* Icons */
-[data-icon] {
+[icon] {
   font-size: 0;
 }
 
-[data-icon]:before {
+[icon]:before {
   position: absolute;
   content: "";
   width: 3rem;
@@ -118,14 +118,14 @@ html[dir="rtl"] button {
   float: right;
 }
 
-html[dir="rtl"] [data-icon="back"] {
+html[dir="rtl"] [icon="back"] {
   transform: rotate(180deg);
 }
 
 /* -----------------------------------------------------------------
   HEADER SKIN: default
   Default values in case we are not overriding them using
-  data-skin
+  'skin'
 ----------------------------------------------------------------- */
 
 gaia-header {
@@ -150,47 +150,47 @@ button:hover {
 }
 
 /* Icons */
-[data-icon="add"]:before {
+[icon="add"]:before {
   background-image: url(images/icons/add.png);
 }
 
-[data-icon="compose"]:before {
+[icon="compose"]:before {
   background-image: url(images/icons/compose.png);
 }
 
-[data-icon="edit"]:before {
+[icon="edit"]:before {
   background-image: url(images/icons/edit.png);
 }
 
-[data-icon="send"]:before {
+[icon="send"]:before {
   background-image: url(images/icons/send.png);
 }
 
-[data-icon="close"]:before {
+[icon="close"]:before {
   background-image: url(images/icons/close.png);
 }
 
-[data-icon="back"]:before {
+[icon="back"]:before {
   background-image: url(images/icons/back.png);
 }
 
-[data-icon="menu"]:before {
+[icon="menu"]:before {
   background-image: url(images/icons/menu.png);
 }
 
-[data-icon="user"]:before {
+[icon="user"]:before {
   background-image: url(images/icons/user.png);
 }
 
-[data-icon="up"]:before {
+[icon="up"]:before {
   background-image: url(images/icons/up.png);
 }
 
-[data-icon="down"]:before {
+[icon="down"]:before {
   background-image: url(images/icons/down.png);
 }
 
-[data-icon="options"]:before {
+[icon="options"]:before {
   background-image: url(images/icons/options.png);
 }
 
@@ -198,19 +198,19 @@ button:hover {
   HEADER SKIN: comms
 ----------------------------------------------------------------- */
 
-[data-skin="comms"] {
+[skin="comms"] {
   background-color: #00adad;
 }
 
-[data-skin="comms"] a,
-[data-skin="comms"] button {
+[skin="comms"] a,
+[skin="comms"] button {
   color: rgba(0,0,0,0.5);
 }
 
-[data-skin="comms"] a:hover,
-[data-skin="comms"] button:hover,
-[data-skin="comms"] a:active,
-[data-skin="comms"] button:active {
+[skin="comms"] a:hover,
+[skin="comms"] button:hover,
+[skin="comms"] a:active,
+[skin="comms"] button:active {
   background-color: rgba(0,0,0,0.1);
 }
 
@@ -218,19 +218,19 @@ button:hover {
   HEADER SKIN: dark
 ----------------------------------------------------------------- */
 
-[data-skin="dark"] {
+[skin="dark"] {
   background-color: #242d33;
 }
 
-[data-skin="dark"] a,
-[data-skin="dark"] button {
+[skin="dark"] a,
+[skin="dark"] button {
   color: #00aac5;
 }
 
-[data-skin="dark"] a:hover,
-[data-skin="dark"] button:hover,
-[data-skin="dark"] a:active,
-[data-skin="dark"] button:active {
+[skin="dark"] a:hover,
+[skin="dark"] button:hover,
+[skin="dark"] a:active,
+[skin="dark"] button:active {
   background-color: rgba(0,0,0,0.4);
 }
 
@@ -238,34 +238,34 @@ button:hover {
   HEADER SKIN: organic
 ----------------------------------------------------------------- */
 
-[data-skin="organic"] {
+[skin="organic"] {
   color: #868692;
   background-color: #f4f4f4;
 }
 
-[data-skin="organic"] h1 {
+[skin="organic"] h1 {
   color: #868692;
 }
 
-[data-skin="organic"] a,
-[data-skin="organic"] button {
+[skin="organic"] a,
+[skin="organic"] button {
   color: #00aac5;
 }
 
 /* Icons */
-[data-skin="organic"] [data-icon="back"]:before {
+[skin="organic"] [icon="back"]:before {
   background-image: url(images/icons/organic/back.png);
 }
 
-[data-skin="organic"] [data-icon="close"]:before {
+[skin="organic"] [icon="close"]:before {
   background-image: url(images/icons/organic/close.png);
 }
 
-[data-skin="organic"] [data-icon="add"]:before {
+[skin="organic"] [icon="add"]:before {
   background-image: url(images/icons/organic/add.png);
 }
 
-[data-skin="organic"] [data-icon="edit"]:before {
+[skin="organic"] [icon="edit"]:before {
   background-image: url(images/icons/organic/edit.png);
 }
 
