--- a/elements/gaia_grid/style.css
+++ b/elements/gaia_grid/style.css
@@ -41,10 +41,10 @@
 
 .divider span {
   display: block;
-  background: #fff;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.5));
   width: 100%;
   z-index: 2;
-  border-radius: 40%;
+  height: 0.2rem
 }
 
 .divider:last-of-type {
