Updated latest shared/elements from gaia

--- a/elements/gaia_grid/style.css
+++ b/elements/gaia_grid/style.css
@@ -60,10 +60,6 @@
   background: url(images/add.png) no-repeat;
 }
 
-.edit-mode .collection:not(.active) {
-  transition: transform 0.35s;
-}
-
 .icon p {
   pointer-events: none;
   height: 3.2rem;
@@ -119,11 +115,12 @@
 }
 
 .dragging .divider,
-.dragging .icon:not(.active) {
-  transition: transform 0.35s;
+.dragging .icon:not(.active),
+.dropped {
+  transition: transform 0.5s, opacity 0.5s;
 }
 
-.edit-mode .divider:last-child {
+.edit-mode .divider:last-of-type {
   visibility: visible;
 }
 
@@ -152,7 +149,7 @@
   display: none;
 }
 
-.edit-mode .icon.bookmark .title {
+.edit-mode .icon.bookmark.editable .title {
   background-color: rgba(132, 132, 132, 0.7);
   border-radius: 2rem;
   margin-top: .4rem;
