Updated latest shared/elements from gaia

--- a/elements/gaia_header/style.css
+++ b/elements/gaia_header/style.css
@@ -24,7 +24,7 @@ h1 {
   margin: 0;
   padding: 0 1rem;
   height: 100%;
-  font-weight: lighter;
+  font-weight: 300;
   font-style: italic;
   text-align: center;
 }
