--- a/elements/gaia_grid/style.css
+++ b/elements/gaia_grid/style.css
@@ -251,6 +251,8 @@
   font-weight: 300;
   white-space: nowrap;
   text-overflow: ellipsis;
+  overflow: hidden;
+  pointer-events: none;
 }
 
 .edit-mode .header .title {
