Updated latest shared/elements from gaia

--- a/elements/gaia-theme/gaia-theme.css
+++ b/elements/gaia-theme/gaia-theme.css
@@ -187,6 +187,7 @@ Gaia theme variables
 
   --header-background: var(--background);
   --header-icon-color: var(--text-color);
+  --header-button-color: var(--highlight-color);
 
   /** Borders
    ---------------------------------------------------------*/
