--- a/elements/gaia_grid/style.css
+++ b/elements/gaia_grid/style.css
@@ -208,77 +208,43 @@
 }
 
 .group .header {
-  height: 4rem;
+  height: 3rem;
 }
 
 .group .header span {
   position: absolute;
-  top: 1rem;
+  height: 3rem;
+  top: 0;
+
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100% 2rem;
+
   transition: transform 0.25s, opacity 0.25s;
 }
 
-.group .header .gripper,
-.group .header .toggle {
-  width: 4.7rem;
-  height: 4rem;
-  top: 0;
-
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
-
 .group .header .gripper {
-  left: 0;
+  left: 11.8rem;
+  width: 8.4rem;
   background-image: url('images/move_gripper.png');
   opacity: 0;
-  transform: translate(-3.7rem, 0);
+  transform: translate(0, -100%);
 }
 
-.edit-mode .group .header .gripper {
+.edit-mode .group:not(.collapsed) .header .gripper {
   opacity: 1;
   transform: translate(0, 0);
 }
 
-.group .header .title {
-  left: 1.4rem;
-  /* This is full width - gripper - toggle - padding */
-  width: calc(100% - 2.7rem - 2.7rem - 2.8rem);
-  height: 4rem;
-
-  text-align: left;
-  vertical-align: middle;
-  color: white;
-  font-size: 1.6rem;
-  font-style: italic;
-  font-weight: 300;
-  text-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.45);
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  pointer-events: none;
-}
-
-.group .header .title.empty {
-  opacity: 0;
-  color: #989898;
-}
-
-.edit-mode .header .title {
-  transform: translate(3.3rem, 0);
-}
-
-.edit-mode .header .title.empty {
-  opacity: 1;
-}
-
 .group .header .toggle {
+  width: 5.34rem;
   right: 0;
   background-image: url('images/collapse_arrow.png');
+  transform-origin: 50% 1.6rem;
 }
 
 .group.collapsed .header .toggle {
-  transform: rotateZ(180deg);
+  transform: translateY(2rem) rotateZ(180deg);
 }
 
 .group.active .header .toggle {
@@ -337,7 +303,17 @@
   opacity: 0;
 }
 
-.edit-mode .group .separator {
+.group.odd .separator {
+  opacity: 1;
+}
+
+.group.odd .separator > span {
+  background-color: rgba(255, 255, 255, 0.15);
+  opacity: 1;
+}
+
+.edit-mode .group .separator,
+.edit-mode .group .separator > span {
   opacity: 0;
 }
 
