--- a/elements/gaia_checkbox/style.css
+++ b/elements/gaia_checkbox/style.css
@@ -1,29 +1,33 @@
+gaia-checkbox {
+  display: inline-block;
+}
+
 #checkbox {
   display: inline-block;
   vertical-align: middle;
   width: 100%;
-  height: 5rem;
   position: relative;
   background: none;
 }
 
 #checkbox span {
-  float: left;
   font-size: 1.8rem;
   color: #333;
-  padding: 1rem 0 0;
-  height: 6rem;
   line-height: 3rem;
   box-sizing: border-box;
   display: block;
+  min-width: 2.2rem;
+  min-height: 2.2rem;
+  width: 100%;
+  padding-right: 2.2rem;
 }
 
 #checkbox span:after {
   content: '';
   position: absolute;
-  left: 50%;
+  right: 0;
   top: 50%;
-  margin: -1.1rem 0 0 -1.1rem;
+  margin: -1.2rem 0 0 -1.2rem;
   width: 2.2rem;
   height: 2.2rem;
 }
