--- a/elements/gaia-theme/gaia-theme.css
+++ b/elements/gaia-theme/gaia-theme.css
@@ -70,6 +70,11 @@ Gaia theme variables
     inset 0 -1px 0 #d8d8d8,
     inset 0 1px 0 #eeeeee;
   --button-box-shadow-active: var(--button-box-shadow);
+
+  /** Header
+   ---------------------------------------------------------*/
+
+  --header-disabled-button-color: rgba(255,255,255,0.3);
 }
 
 
@@ -154,7 +159,8 @@ Gaia theme variables
   --header-color: var(--title-color);
   --header-background: var(--background);
   --header-button-color: var(--highlight-color);
-  --header-action-button-color: var(--background-minus);
+  --header-disabled-button-color: var(--color-theta);
+  --header-action-button-color: var(--title-color);
 }
 
 .theme-media {
