--- a/elements/gaia_grid/style.css
+++ b/elements/gaia_grid/style.css
@@ -204,7 +204,7 @@
 }
 
 .group:not(.active):not(.newly-created) > span {
-  transition: transform 0.5s;
+  transition: background-color 0.5s, opacity 0.5s, transform 0.5s;
 }
 
 .group .header {
@@ -252,12 +252,13 @@
 }
 
 .group .background {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.15);
   opacity: 0;
   height: 0.1rem;
   transform-origin: 0 0;
 }
 
+.group.odd:not(.newly-created) .background,
 .edit-mode .group:not(.newly-created) .background {
   opacity: 1;
 }
@@ -272,14 +273,6 @@
 
 .group .shadow {
   background-color: rgba(255, 255, 255, 0.15);
-  opacity: 0;
-}
-
-.group.odd .shadow {
-  opacity: 1;
-}
-
-.edit-mode .group .shadow {
   opacity: 0;
 }
 
