--- a/elements/gaia_grid/style.css
+++ b/elements/gaia_grid/style.css
@@ -267,7 +267,8 @@
   background-color: rgba(51, 51, 51, 0.9);
 }
 
-.group.hovering .background {
+.group.hovering .background,
+.group.drop-target .background {
   background-color: rgba(27, 185, 225, 0.5);
 }
 
