--- a/elements/gaia_grid/style.css
+++ b/elements/gaia_grid/style.css
@@ -374,3 +374,14 @@
 .edit-mode.hover-over-top {
   transform: translateY(0.8rem);
 }
+
+/* RTL View */
+:-moz-dir(rtl) .group .header .toggle {
+  left: 0;
+  right: unset;
+}
+
+/* RTL fixes being tracked in bug 1008013 */
+:-moz-dir(rtl) gaia-grid {
+  direction: ltr;
+}
