Updated latest shared/elements from gaia

--- a/elements/gaia_grid/style.css
+++ b/elements/gaia_grid/style.css
@@ -47,10 +47,6 @@
   z-index: 3;
 }
 
-.dragging .icon {
-  will-change: transform;
-}
-
 .icon.launching {
   opacity: .65;
 }
@@ -147,6 +143,10 @@
   transition: transform 0.5s, opacity 0.5s;
 }
 
+.icon.active {
+  will-change: transform;
+}
+
 .edit-mode .icon .remove {
   display: block;
   position: absolute;
@@ -208,12 +208,12 @@ instead of the context menu.
   transition: background-color 0.5s, opacity 0.5s;
 }
 
-.dragging .group > span {
-  will-change: transform;
-}
-
 .group:not(.active):not(.newly-created) > span {
   transition: background-color 0.5s, opacity 0.5s, transform 0.5s;
+}
+
+.group.active > span {
+  will-change: transform;
 }
 
 .group .header {
@@ -390,7 +390,6 @@ instead of the context menu.
  * creation hint.
  */
 .edit-mode {
-  will-change: transform;
   transition: transform 0.25s;
 }
 
