Updated latest shared/elements from gaia

--- a/elements/gaia-site-icon/style.css
+++ b/elements/gaia-site-icon/style.css
@@ -1,14 +1,12 @@
 gaia-app-icon {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  font-size: 0;
 }
 
 #image-container {
   position: relative;
   transition: visibility 0.2s, opacity 0.2s;
-  font-size: 0;
-  line-height: 0;
 }
 
 #image-container.initial-load {
@@ -42,6 +40,7 @@ gaia-app-icon {
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: center;
+  margin-top: 0.3rem;
 }
 
 #title-container {
